--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "onStartupFinished"
   ],
   "main": "./dist/extension.js",
+  "icon": "assets/lumpat_logo.png",
   "contributes": {
     "commands": [
       {
